# choschmous-v1

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Makefile  PROGRESS_S4.md  PROGRESS_S5.md  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.vault.yml  docker-compose.yml  pentest-report-2026-06-10.md  pentest-report-final-2026-06-10.md  pentest-report-retest-2026-06-10.md  uat.yml
.github/: dependabot.yml
argocd/: README.md  applicationset.yaml  appproject.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cleanup_duplicate_enrollments.sql  hi.eraserdiagram  main.py  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 01e2671a48d6_add_failed_attempts_and_locked_until.py  425f25068de6_initial_schema.py  757ed5271195_add_name_en_to_organizations.py  834864ee56c1_add_search_text_column_and_index.py  a1b2c3d4e5f6_add_athlete_participation_athletes_id_index.py  a9b8c7d6e5f4_add_review_state_to_sports_event_org.py  b2c3d4e5f6a7_add_uploaded_files_table.py  b3f1a82c9d70_phase2_sport_config.py  b8d4e1f2a3c4_add_team_size_to_categories.py  c305a1b2c3d4_partition_pii_audit_constraints.py  c4d5e6f7g8h9_phase_3_teams.py  c8d9e0f1a2b3_reconcile_out_of_band_schema_patches.py  d401a1b2c3d4_add_user_mfa.py  d403a1b2c3d4_pii_encryption_audit_chain.py  d406a1b2c3d4_add_notifications.py  d501a1b2c3d4_add_minor_consents.py  d58f7c21045b_add_mixed_to_gender_enum.py  d5e6f7g8h9i0_phase_4_organizers.py  e6f7g8h9i0j1_phase_5_open_survey.py  f7a8b9c0d1e2_phase_6_category_review.py  fe93a4dc40ad_add_category_survey_review.py
backend/app/application/audit/: __init__.py  chain.py  siem.py  writer.py
backend/app/application/participants/: __init__.py  errors.py  formatting.py  query.py  register.py  repository.py  reveal_pii.py  update.py  validation.py
backend/app/application/reports/: render.py
backend/app/domain/: __init__.py
backend/app/domain/policies/: __init__.py  attributes.py  engine.py  models.py  rules.py
backend/app/infrastructure/db/: __init__.py  crypto.py  encrypted_types.py
backend/app/infrastructure/search/: __init__.py  base.py  db_provider.py  factory.py  opensearch_provider.py
backend/app/workers/: queue.py  report_worker.py  storage.py
backend/app/workers/email/: __init__.py  sender.py  templates.py  worker.py
backend/app/workers/retention/: __init__.py  erasure.py  policies.py  purge.py  worker.py
backend/core/: cache.py  cache_control.py  config.py  content_type_validation.py  csrf.py  dashboard_invalidation.py  database.py  idempotency.py  loggine.py  logging_config.py  logging_mw.py  observability.py  ratelimit.py  redis_client.py  request_context.py  request_size_limit.py  security.py  security_headers.py
backend/migrations/: 001_add_indexes.sql  002_add_token_valid_from.sql  002_alembic_setup.md
backend/scripts/: export_openapi.py  init_db_schema.py  mutation_gate.py  seed_data.py
backend/src/api/: main.py
backend/src/api/v1/routes/: auth.py  card.py  category_survey.py  cloudinary.py  dashboard.py  events.py  excel.py  files.py  imports.py  maintenance.py  mfa.py  notifications.py  oidc.py  open_survey.py  organization.py  organizers.py  participant.py  participation_per_sport.py  public_events.py  public_sports.py  reports.py  root.py  search.py  sports.py  sports_events.py  teams.py  users.py
backend/src/api/v2/routes/: root.py
backend/src/database/: base_repository.py  deps.py
backend/src/models/: __init__.py  athlete_participation.py  athletes.py  audit_log.py  category.py  category_survey_review.py  enroll.py  events.py  leader.py  leader_participation.py  medal.py  minor_consent.py  notification.py  open_survey.py  organization.py  organizer_participation.py  organizer_role.py  participation_per_sport.py  pii_access_log.py  refresh_token.py  sport.py  sports_event.py  sports_event_org.py  team.py  uploaded_file.py  user.py  user_mfa.py
backend/src/models/enum/: event.py  org.py  user.py
backend/src/schemas/: __init__.py  auth.py  category.py  category_survey.py  dashboard.py  enroll.py  event.py  excel.py  import_athlete.py  mfa.py  notification.py  open_survey.py  organization.py  organizer.py  participation_per_sport.py  registration.py  report.py  search.py  sport.py  sports_event.py  sports_event_org.py  team.py  user.py
backend/src/services/: auth_service.py  card_service.py  category_survey_service.py  dashboard_service.py  events_service.py  excel_service.py  file_access.py  import_service.py  notification_dispatch.py  notification_service.py  open_survey_service.py  organization_service.py  organizer_service.py  participant_service.py  participation_per_sport_service.py  report_renderers.py  report_service.py  search_service.py  sports_service.py  team_service.py  user_service.py
backend/src/services/mfa/: __init__.py  challenge.py  oidc.py  recovery.py  service.py  totp.py  webauthn.py
backend/tests/: conftest.py  factories.py  test_audit_chain.py  test_auth_login.py  test_breached_password.py  test_bulk_import.py  test_category_survey.py  test_email_worker.py  test_file_access.py  test_mfa.py  test_minor_consent.py  test_notifications.py  test_opensearch_indexing.py  test_organizers.py  test_password_policy.py  test_pii_encryption.py  test_policies.py  test_redis_cluster.py  test_redis_resilience.py  test_registration_schema.py  test_registration_validation.py  test_registration_window.py  test_report_security.py  test_reports.py  test_retention.py  test_review_pending_count.py  test_search.py  test_security_bypass_attempts.py  test_sport_config.py  test_teams.py
backend/tests/contract/: test_openapi_schema.py  test_schemathesis_contract.py
backend/tests/load/: CAPACITY_REPORT.md  locustfile.py  seed_load_users.py
docs/: ARCHITECTURE_AUDIT.md  BACKEND.md  CODE_AUDIT_REPORT.md  DATA_GOVERNANCE.md  (+10 more)
(+461 files in other folders)
