[project]
name = "backend-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "bcrypt==4.0.1",
    "cloudinary==1.44.1",
    "faker==40.11.1",
    "fastapi==0.135.1",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.11",
    "pydantic-settings==2.13.1",
    "pydantic[email]==2.12.5",
    "pyjwt==2.13.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.27",
    "urllib3>=2.7.0",
    "redis[hiredis]==8.0.0",
    "sentry-sdk==2.54.0",
    "sqlalchemy==2.0.48",
    "uvicorn[standard]==0.41.0",
    "openpyxl==3.1.5",
    "weasyprint==63.1",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "locust==2.44.1",
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
