[project]
name = "backend-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic==1.18.5",
    "asyncpg==0.31.0",
    "bcrypt==4.0.1",
    "cloudinary==1.44.2",
    "faker==40.23.0",
    "fastapi==0.138.1",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.12",
    "pydantic-settings==2.14.2",
    "pydantic[email]==2.13.4",
    "pyjwt==2.13.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "idna>=3.15",
    "urllib3>=2.7.0",
    "redis[hiredis]==8.0.1",
    "sentry-sdk==2.63.0",
    "sqlalchemy==2.0.51",
    # Security pin: starlette<1.3.1 has several CVEs (multipart DoS, etc.).
    # fastapi pulls it transitively; this lower bound forces the patched line.
    "starlette>=1.3.1",
    "uvicorn[standard]==0.49.0",
    "openpyxl==3.1.5",
    "weasyprint==68.1",
    # CHOS-202: arq (Redis-backed) job queue for off-request-path report rendering.
    "arq==0.25.0",
    "opentelemetry-sdk>=1.43.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "locust==2.44.4",
    "msgpack>=1.2.1",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.19",
    # CHOS-503: coverage gate, contract (Schemathesis vs OpenAPI) + mutation testing.
    "coverage==7.14.3",
    "pytest-cov==7.1.0",
    "schemathesis==4.21.10",
    "hypothesis==6.155.7",
    "mutmut==3.6.0",
    "jsonschema==4.26.0",
]

[tool.ruff]
line-length = 88
target-version = "py314"
# Alembic revisions are autogenerated; linting/formatting them is churn for no
# gain (and they legitimately carry unused imports + long DDL lines).
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
# Pragmatic first-adoption set: pyflakes (real bugs: unused/undefined names,
# redefinitions) + pycodestyle errors/warnings. E402 (import-not-at-top) and
# E501 (line length) are intentionally off: the codebase has legitimate
# post-`sys.path` / conditional imports, and line length is owned by the
# formatter. Tighten with "I", "B", "UP" once the team is ready.
select = ["E", "F", "W"]
ignore = ["E402", "E501"]

[tool.ruff.lint.per-file-ignores]
# Barrel modules re-export names for the public package API; those imports look
# "unused" to pyflakes but are the whole point of the file.
"**/__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"

# ── CHOS-503: coverage gate ─────────────────────────────────────────────────
# The BLOCKING gate is scoped to the security/integrity-critical core (ABAC
# authorization engine, the hash-chained audit log, the retention purge +
# subject-erasure). A government system cannot regress those below 85%. Glue that
# is untestable without live infra (the arq *worker.py entrypoints, the
# best-effort SIEM shipper) is omitted. Global repo coverage (~69% at sprint 5,
# tracked non-blocking in CI) ramps the `source` list outward over time — see the
# "coverage-ramp" note in .github/workflows/ci.yml. Run the gate locally with:
#   pytest --cov --cov-fail-under=85
[tool.coverage.run]
branch = true
source = [
    "app/domain/policies",
    "app/application/audit",
    "app/workers/retention",
    "core/security",
    "core/idempotency",
]
omit = [
    "*/__init__.py",
    "*/worker.py",
    "app/application/audit/siem.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

# ── CHOS-503: mutation testing ──────────────────────────────────────────────
# Mutation testing is slow, so it is scoped to the pure, fully-unit-tested ABAC
# policy engine — the highest-stakes logic (an undetected mutation there is a
# silent authorization bug). The CI "mutation" job asserts >=70% of mutants are
# killed. Run locally with: mutmut run  (then: mutmut results).
[tool.mutmut]
source_paths = ["app/domain/policies/engine.py", "app/domain/policies/models.py"]
# The DB-free policy unit suite kills mutants. Scope = the security-critical
# decision CORE (deny-by-default + deny-overrides combine logic in engine.py and
# the Decision/Effect model). The declarative rules.py RBAC mapping is validated
# by the authz integration/bypass suite, which cannot run in mutmut's in-process
# sandbox (async DB fixtures). (mutmut 3.x)
pytest_add_cli_args_test_selection = ["tests/test_policies.py"]
# mutmut sandboxes into mutants/; the shared tests/conftest imports the whole app,
# so the rest of the backend must be copied alongside the mutated policy package.
also_copy = ["core", "src", "main.py", "app", "conftest.py", "alembic.ini", ".env"]
